# hubris

app/demo-stm32g030-proto/: Cargo.toml  README.md  app-g030-proto.toml
app/micromod-69/: Cargo.toml  app.toml
app/okdo-e1/: Cargo.toml  app.toml
boards/: micromod-69.toml  stm32g030-proto.toml
drv/lpc55-gpio-api/src/: lib.rs
drv/lpc55-i2c/: Cargo.toml
drv/lpc55-i2c/src/: main.rs
drv/user-leds/src/: main.rs
task/jefe/src/: dump.rs
