[package]
edition = "2021"
readme = "README.md"
name = "demo-stm32g030-proto"
version = "0.1.0"

[features]
g030 = ["stm32g0/stm32g030", "kern/nano"]
dump = ["kern/dump"]

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
cfg-if = { workspace = true }
stm32g0 = { workspace = true, features = ["rt"] }

kern = { path = "../../sys/kern" }

[build-dependencies]
build-util = {path = "../../build/util"}

# this lets you use `cargo fix`!
[[bin]]
name = "demo-stm32g030-proto"
test = false
doctest = false
bench = false

[lints]
workspace = true
